feat: Oracle migration complete + PETZI webhook functional - Migrated H2 → Oracle Database with mock data (529 sales, 5 events) - Fixed Hibernate entity mappings and repository queries - WebhookController now updates event statistics - All API endpoints tested and operational - Ready for demo